Fix radix sort.

--- a/algorithms_in_c/radix_sort/CMakeLists.txt
+++ b/algorithms_in_c/radix_sort/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(radix_sort
-        radix_sort.c
+        radix_sort.cpp
         )
         
 target_link_libraries(radix_sort LINK_PUBLIC utils)
